- Fixed MSAA, added Three EffectComposer

--- a/src/index.css
+++ b/src/index.css
@@ -8,9 +8,11 @@ a {
 }
 
 a:link {
-  color: grey;
+  color: white;
+  text-decoration: none;
 }
 
 a:visited {
   color: white;
+  text-decoration: none;
 }
